Fixed order bundle page spacing

--- a/SEG31-DESPATT-SAQUILAYAN_AND_CLAMOR-MP4/WebContent/scss/stylesheet.scss
+++ b/SEG31-DESPATT-SAQUILAYAN_AND_CLAMOR-MP4/WebContent/scss/stylesheet.scss
@@ -4,6 +4,26 @@
 }
 
 
+/*FOR NAVBAR*/
+.navbar-custom {
+    background-color: #e4bad4;
+}
+/* change the brand and text color */
+.navbar-custom .navbar-brand,
+.navbar-custom .navbar-text {
+    color: rgba(255,255,255,.8);
+    font-weight: 600;
+}
+/* change the link color */
+.navbar-custom .navbar-nav .nav-link {
+    color: rgba(255,255,255,.5);
+}
+/* change the color of active or hovered links */
+.navbar-custom .nav-item.active .nav-link,
+.navbar-custom .nav-item:hover .nav-link {
+    color: #ffffff;
+}
+
 header{
     img{
         width: 80px;
